[gd_scene load_steps=32 format=1]

[ext_resource path="res://swine/swine.gd" type="Script" id=1]
[ext_resource path="res://swine/sprites/intershape.png" type="Texture" id=2]
[ext_resource path="res://swine/sprites/square.png" type="Texture" id=3]
[ext_resource path="res://swine/sprites/triangle.png" type="Texture" id=4]
[ext_resource path="res://swine/sprites/dead/die_pig_1.png" type="Texture" id=5]
[ext_resource path="res://swine/sprites/dead/die_pig_2.png" type="Texture" id=6]
[ext_resource path="res://font1.fnt" type="Font" id=7]
[ext_resource path="res://swine/audio/drink.wav" type="Sample" id=8]
[ext_resource path="res://swine/audio/pain.wav" type="Sample" id=9]
[ext_resource path="res://swine/audio/spit.wav" type="Sample" id=10]
[ext_resource path="res://swine/audio/swine.wav" type="Sample" id=11]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 149.814, 147.869 )

[sub_resource type="ConcavePolygonShape2D" id=2]

custom_solver_bias = 0.0
segments = Vector2Array( 88.7376, -159.7, -86.4073, -159.844, -86.4073, -159.844, -135.255, -125.382, -135.255, -125.382, -147.69, -38.7164, -147.69, -38.7164, -52.571, 109.649, -52.571, 109.649, 0.28067, 145.708, 0.28067, 145.708, 46.2787, 112.966, 46.2787, 112.966, 148.685, -41.1114, 148.685, -41.1114, 138.507, -120.145, 138.507, -120.145, 88.7376, -159.7 )

[sub_resource type="SpriteFrames" id=3]

frames = [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ]

[sub_resource type="ColorRamp" id=4]

offsets = FloatArray( 0.248949, 0.829268 )
colors = ColorArray( 0.637603, 0.734375, 0.636841, 1, 1, 1, 1, 1 )

[sub_resource type="ColorRamp" id=5]

offsets = FloatArray( 0.515709, 0.969349 )
colors = ColorArray( 0.375, 0.882813, 1, 1, 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=6]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.0504456, 1, 0.0429688, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxFlat" id=7]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 1, 0.078125, 0.078125, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="ColorRamp" id=8]

offsets = FloatArray( 0.643678, 0.999234 )
colors = ColorArray( 1, 0, 0, 1, 1, 0.25, 0.25, 1 )

[sub_resource type="RectangleShape2D" id=9]

custom_solver_bias = 0.0
extents = Vector2( 104.42, 13.8027 )

[sub_resource type="Animation" id=10]

resource/name = "die"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("swine_sprite:frame")
tracks/0/interp = 1
tracks/0/keys = { "cont":false, "times":FloatArray( 0.5, 0.9, 1 ), "transitions":FloatArray( 1, 1, 1 ), "values":[ 3, 3, 4 ] }
tracks/1/type = "value"
tracks/1/path = NodePath("swine_sprite/swine_particle_left:config/emitting")
tracks/1/interp = 1
tracks/1/keys = { "cont":false, "times":FloatArray( 0, 1 ), "transitions":FloatArray( 1, 1 ), "values":[ true, false ] }
tracks/2/type = "value"
tracks/2/path = NodePath("swine_sprite/swine_particle_right:config/emitting")
tracks/2/interp = 1
tracks/2/keys = { "cont":false, "times":FloatArray( 0, 1 ), "transitions":FloatArray( 1, 1 ), "values":[ true, false ] }
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/keys = { "times":FloatArray( 1 ), "transitions":FloatArray( 1 ), "values":[ { "args":[  ], "method":"set_dead" } ] }
tracks/4/type = "value"
tracks/4/path = NodePath("swine_sprite:modulate")
tracks/4/interp = 1
tracks/4/keys = { "cont":true, "times":FloatArray( 0, 1 ), "transitions":FloatArray( 1, 1 ), "values":[ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.320562 ) ] }
tracks/5/type = "value"
tracks/5/path = NodePath("resurrect_button:visibility/visible")
tracks/5/interp = 1
tracks/5/keys = { "cont":false, "times":FloatArray( 0, 1 ), "transitions":FloatArray( 1, 1 ), "values":[ false, true ] }

[sub_resource type="Animation" id=11]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("swine_sprite:frame")
tracks/0/interp = 1
tracks/0/keys = { "cont":false, "times":FloatArray( 0, 0.5, 1 ), "transitions":FloatArray( 1, 1, 1 ), "values":[ 2, 0, 1 ] }
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/keys = { "times":FloatArray( 1 ), "transitions":FloatArray( 1 ), "values":[ { "args":[ 0 ], "method":"set_shape" } ] }
tracks/2/type = "value"
tracks/2/path = NodePath("swine_square:visibility/visible")
tracks/2/interp = 1
tracks/2/keys = { "cont":false, "times":FloatArray( 0, 1 ), "transitions":FloatArray( 1, 1 ), "values":[ false, true ] }
tracks/3/type = "value"
tracks/3/path = NodePath("swine_triangle:visibility/visible")
tracks/3/interp = 1
tracks/3/keys = { "cont":false, "times":FloatArray( 0, 1 ), "transitions":FloatArray( 1, 1 ), "values":[ true, false ] }
tracks/4/type = "value"
tracks/4/path = NodePath("swine_sprite:modulate")
tracks/4/interp = 1
tracks/4/keys = { "cont":true, "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "values":[ Color( 1, 1, 1, 1 ) ] }
tracks/5/type = "value"
tracks/5/path = NodePath("swine_sprite/swine_particle_left:config/emitting")
tracks/5/interp = 1
tracks/5/keys = { "cont":false, "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "values":[ true ] }
tracks/6/type = "value"
tracks/6/path = NodePath("swine_sprite/swine_particle_right:config/emitting")
tracks/6/interp = 1
tracks/6/keys = { "cont":false, "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "values":[ true ] }

[sub_resource type="Animation" id=12]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("swine_sprite:frame")
tracks/0/interp = 1
tracks/0/keys = { "cont":false, "times":FloatArray( 0, 0.5, 1 ), "transitions":FloatArray( 1, 1, 1 ), "values":[ 1, 0, 2 ] }
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/keys = { "times":FloatArray( 1 ), "transitions":FloatArray( 1 ), "values":[ { "args":[ 1 ], "method":"set_shape" } ] }
tracks/2/type = "value"
tracks/2/path = NodePath("swine_square:visibility/visible")
tracks/2/interp = 1
tracks/2/keys = { "cont":false, "times":FloatArray( 0, 1 ), "transitions":FloatArray( 1, 1 ), "values":[ true, false ] }
tracks/3/type = "value"
tracks/3/path = NodePath("swine_triangle:visibility/visible")
tracks/3/interp = 1
tracks/3/keys = { "cont":false, "times":FloatArray( 0, 1 ), "transitions":FloatArray( 1, 1 ), "values":[ false, true ] }
tracks/4/type = "value"
tracks/4/path = NodePath("swine_sprite:modulate")
tracks/4/interp = 1
tracks/4/keys = { "cont":true, "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "values":[ Color( 1, 1, 1, 1 ) ] }
tracks/5/type = "value"
tracks/5/path = NodePath("swine_sprite/swine_particle_left:config/emitting")
tracks/5/interp = 1
tracks/5/keys = { "cont":false, "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "values":[ true ] }
tracks/6/type = "value"
tracks/6/path = NodePath("swine_sprite/swine_particle_right:config/emitting")
tracks/6/interp = 1
tracks/6/keys = { "cont":false, "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "values":[ true ] }

[sub_resource type="Animation" id=13]

length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("swine_sprite:transform/pos")
tracks/0/interp = 1
tracks/0/keys = { "cont":true, "times":FloatArray( 0, 0.3, 0.7, 1 ), "transitions":FloatArray( 1, 1, 1, 1 ), "values":[ Vector2( 0, 0 ), Vector2( 10, -10 ), Vector2( -10, 10 ), Vector2( 0, 0 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("swine_sprite/swine_particle_left:transform/pos")
tracks/1/interp = 1
tracks/1/keys = { "cont":true, "times":FloatArray( 0, 0.3, 1 ), "transitions":FloatArray( 1, 1, 1 ), "values":[ Vector2( -140, -105 ), Vector2( -140, -125 ), Vector2( -140, -105 ) ] }
tracks/2/type = "value"
tracks/2/path = NodePath("swine_sprite/swine_particle_right:transform/pos")
tracks/2/interp = 1
tracks/2/keys = { "cont":true, "times":FloatArray( 0, 0.7, 1 ), "transitions":FloatArray( 1, 1, 1 ), "values":[ Vector2( 140, -105 ), Vector2( 140, -125 ), Vector2( 140, -105 ) ] }

[sub_resource type="RectangleShape2D" id=14]

custom_solver_bias = 0.0
extents = Vector2( 86.3076, 268.326 )

[sub_resource type="StyleBoxFlat" id=15]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.9375, 0.449696, 0.369873, 0.45283 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxFlat" id=16]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.988281, 0.482559, 0.482559, 0.593666 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxEmpty" id=17]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=18]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=19]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="SampleLibrary" id=20]

samples/swine = { "db":0.0, "pitch":1.0, "sample":ExtResource( 11 ) }
samples/drink = { "db":0.0, "pitch":1.0, "sample":ExtResource( 8 ) }
samples/spit = { "db":0.04, "pitch":1.0, "sample":ExtResource( 10 ) }
samples/pain = { "db":2.0, "pitch":1.0, "sample":ExtResource( 9 ) }

[node name="swine" type="Area2D"]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, -14 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 2 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/1/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )
__meta__ = { "_edit_lock_":true }
current_shape = 0
health = 100.0

[node name="swine_square" type="CollisionShape2D" parent="."]

visibility/visible = false
transform/pos = Vector2( 0, -14 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0
__meta__ = { "_edit_lock_":true }

[node name="swine_triangle" type="CollisionPolygon2D" parent="."]

build_mode = 1
polygon = Vector2Array( 88.7376, -159.7, -86.4073, -159.844, -135.255, -125.382, -147.69, -38.7164, -52.571, 109.649, 0.28067, 145.708, 46.2787, 112.966, 148.685, -41.1114, 138.507, -120.145 )
shape_range = Vector2( 1, 1 )
trigger = false
__meta__ = { "_edit_lock_":true }

[node name="swine_sprite" type="AnimatedSprite" parent="."]

frames = SubResource( 3 )
frame = 2
__meta__ = { "_edit_lock_":true, "_editor_collapsed":true }

[node name="swine_particle_left" type="Particles2D" parent="swine_sprite"]

visibility/behind_parent = true
transform/pos = Vector2( -140, -105 )
config/amount = 24
config/lifetime = 3.0
config/time_scale = 5.0
params/direction = 270.0
params/spread = 20.0
params/linear_velocity = 10.0
params/spin_velocity = 10.0
params/orbit_velocity = 0.0
params/gravity_direction = 10.0
params/gravity_strength = 30.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 10.0
params/initial_angle = 0.0
params/initial_size = 5.0
params/final_size = 20.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/direction = 1.0
randomness/spread = 1.0
randomness/linear_velocity = 1.0
randomness/spin_velocity = 1.0
randomness/initial_size = 1.0
randomness/final_size = 1.0
color/color_ramp = SubResource( 4 )
__meta__ = { "_edit_lock_":true }

[node name="swine_particle_right" type="Particles2D" parent="swine_sprite"]

visibility/behind_parent = true
transform/pos = Vector2( 140, -105 )
config/amount = 24
config/lifetime = 3.0
config/time_scale = 5.0
params/direction = 90.0
params/spread = 20.0
params/linear_velocity = 10.0
params/spin_velocity = 10.0
params/orbit_velocity = 0.0
params/gravity_direction = 350.0
params/gravity_strength = 30.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 10.0
params/initial_angle = 0.0
params/initial_size = 5.0
params/final_size = 20.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/direction = 1.0
randomness/spread = 1.0
randomness/linear_velocity = 1.0
randomness/spin_velocity = 1.0
randomness/initial_size = 1.0
randomness/final_size = 1.0
color/color_ramp = SubResource( 4 )
__meta__ = { "_edit_lock_":true }

[node name="saliva_particles" type="Particles2D" parent="swine_sprite"]

visibility/behind_parent = true
transform/pos = Vector2( 0, -168.624 )
config/amount = 24
config/lifetime = 5.0
config/time_scale = 10.0
config/emitting = false
params/direction = 180.0
params/spread = 150.0
params/linear_velocity = 30.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 9.8
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 5.0
params/initial_angle = 0.0
params/initial_size = 20.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 1.0
randomness/linear_velocity = 1.0
randomness/initial_size = 1.0
randomness/final_size = 1.0
color/color_ramp = SubResource( 5 )
__meta__ = { "_edit_lock_":true }

[node name="splash_particles" type="Particles2D" parent="swine_sprite"]

transform/pos = Vector2( 0, -170 )
config/amount = 64
config/lifetime = 0.5
config/preprocess = 0.1
config/emit_timeout = 1.5
config/emitting = false
params/direction = 180.0
params/spread = 180.0
params/linear_velocity = 500.0
params/spin_velocity = 50.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 9.8
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 10.0
params/final_size = 25.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 1.0
randomness/direction = 1.0
randomness/spread = 1.0
randomness/linear_velocity = 1.0
randomness/spin_velocity = 1.0
randomness/initial_size = 1.0
randomness/final_size = 1.0
color/color_ramp = SubResource( 5 )
__meta__ = { "_edit_lock_":true }

[node name="health_bar" type="ProgressBar" parent="swine_sprite"]

anchor/right = 1
anchor/bottom = 1
margin/left = -79.0
margin/top = 46.0
margin/right = 222.0
margin/bottom = 279.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
custom_styles/fg = SubResource( 6 )
custom_styles/bg = SubResource( 7 )
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 100.0
range/exp_edit = false
range/rounded = true
percent/visible = false
__meta__ = { "_edit_lock_":true }

[node name="hurt_particles" type="Particles2D" parent="swine_sprite"]

visibility/behind_parent = true
transform/pos = Vector2( 0, -168.624 )
config/amount = 32
config/lifetime = 1.0
config/emit_timeout = 1.0
config/emitting = false
params/direction = 180.0
params/spread = 150.0
params/linear_velocity = 100.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 9.8
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 5.0
params/initial_angle = 0.0
params/initial_size = 20.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 1.0
randomness/linear_velocity = 1.0
randomness/initial_size = 1.0
randomness/final_size = 1.0
color/color_ramp = SubResource( 8 )
__meta__ = { "_edit_lock_":true }

[node name="mouth_area" type="Area2D" parent="."]

input/pickable = false
shapes/0/shape = SubResource( 9 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, -176.504 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 0.0
linear_damp = 0.1
angular_damp = 1.0
__meta__ = { "_edit_lock_":true, "_editor_collapsed":true }

[node name="mouth_shape" type="CollisionShape2D" parent="mouth_area"]

transform/pos = Vector2( 0, -176.504 )
shape = SubResource( 9 )
trigger = true
_update_shape_index = 0
__meta__ = { "_edit_lock_":true }

[node name="swine_morph_animation" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/die = SubResource( 10 )
anims/to_square = SubResource( 11 )
anims/to_triangle = SubResource( 12 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "moving"

[node name="swine_move_animation" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/moving = SubResource( 13 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="swine_attack" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 14 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, -470 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
__meta__ = { "_edit_lock_":true, "_editor_collapsed":true }

[node name="water_gun" type="Particles2D" parent="swine_attack"]

visibility/behind_parent = true
transform/pos = Vector2( 0, -178.624 )
config/amount = 64
config/lifetime = 0.5
config/preprocess = 0.1
config/emit_timeout = 1.5
config/emitting = false
params/direction = 180.0
params/spread = 1.0
params/linear_velocity = 600.0
params/spin_velocity = 50.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 9.8
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 5.0
params/initial_angle = 0.0
params/initial_size = 1.0
params/final_size = 25.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 1.0
randomness/linear_velocity = 1.0
randomness/spin_velocity = 1.0
randomness/initial_size = 1.0
randomness/final_size = 1.0
color/color_ramp = SubResource( 5 )
__meta__ = { "_edit_lock_":true }

[node name="attack_shape" type="CollisionShape2D" parent="swine_attack"]

transform/pos = Vector2( 0, -470 )
shape = SubResource( 14 )
trigger = false
_update_shape_index = 0
__meta__ = { "_edit_lock_":true }

[node name="resurrect_button" type="Button" parent="."]

visibility/visible = false
margin/left = -147.0
margin/top = -159.0
margin/right = 148.0
margin/bottom = 133.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 16 )
custom_styles/focus = SubResource( 17 )
custom_styles/disabled = SubResource( 18 )
custom_styles/normal = SubResource( 19 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
toggle_mode = false
text = "2C to RECRUIT"
flat = true
clip_text = true
__meta__ = { "_edit_lock_":true }

[node name="swine_player" type="SamplePlayer2D" parent="."]

params/volume_db = 1.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 1
config/samples = SubResource( 20 )
config/pitch_random = 1.0

[node name="no" type="Label" parent="."]

visibility/visible = false
margin/left = -75.0
margin/top = -311.0
margin/right = 78.0
margin/bottom = -210.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "NO!"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="no_timeout" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[connection signal="area_enter" from="." to="." method="_on_swine_area_enter"]

[connection signal="area_exit" from="." to="." method="_on_swine_area_exit"]

[connection signal="mouse_enter" from="." to="." method="_on_swine_mouse_enter"]

[connection signal="input_event" from="." to="." method="_on_swine_input_event"]

[connection signal="mouse_exit" from="." to="." method="_on_swine_mouse_exit"]

[connection signal="area_enter" from="mouth_area" to="." method="_on_mouth_area_area_enter"]

[connection signal="area_enter" from="swine_attack" to="." method="_on_swine_attack_area_enter"]

[connection signal="pressed" from="resurrect_button" to="." method="_on_resurrect_button_pressed"]

[connection signal="timeout" from="no_timeout" to="." method="_on_no_timeout_timeout"]


